--- a/index.qmd
+++ b/index.qmd
@@ -5,8 +5,13 @@ about:
 toc: false
 ---
 
-# Hi!
+# Hi! 
 
 I'm a Senior Lecturer in the Applied Math & Stats department <!-- why is Math singular but Stats plural? --> at Johns Hopkins University. 
+Currently, I'm teaching [EN.553.171 Discrete Mathematics](https://jhu.instructure.com/courses/48284).
 
-This website is under construction.
+First and foremost, I am a math educator. I dedicate most of my mental energy to enhancing math education in my courses and more broadly.
+
+My academic interests and experience span a wide range in Math, CS, and Math Education. Lately, I've been captivated by the endeavor of math formalization using the Lean theorem prover. I thoroughly enjoy discussing all these topics. Whether you're a student, mathematician, or educator, please feel free to [reach out to me](mailto:apurva.nakade@jhu.edu) without hesitation.
+
+
