--- a/scribbles/posts/2023-08-20 begin again.qmd
+++ b/scribbles/posts/2023-08-20 begin again.qmd
@@ -2,7 +2,7 @@
 title: Begin Again
 subtitle: Starting to write again
 categories:
-  - Journal
+  - journal
 author: Apurva Nakade
 date: 2023-08-20 11:03:47
 ---
