--- a/scribbles/posts/2023-08-23 starting your day right.qmd
+++ b/scribbles/posts/2023-08-23 starting your day right.qmd
@@ -18,10 +18,10 @@ I came across this [post on Stoicism](https://dailystoic.com/marcus-aurelius-dai
 This made me realize how I've been swept up by the unproductive habit of checking my phone first thing in the morning.
 
 
-Fortunately, I've just finished assembling up my writing desk by a lovely corner window.
+Fortunately, I've just finished assembling my writing desk by a lovely corner window.
 My coffee is brewing and my trusty iPad is charged. 
 Time to get back to morning journaling again.
 Hopefully, even when life gets busy and chaotic, I'll have the stamina and discipline to keep up with this incredibly useful habit.
 
 
-![My Writing Desk](../images/writingDesk.jpg)
+![My writing desk](../images/writingDesk.jpg)
