--- a/scribbles/posts/2023-08-30 group exercise.qmd
+++ b/scribbles/posts/2023-08-30 group exercise.qmd
@@ -1,5 +1,5 @@
 ---
-title: Group exercise
+title: Group Exercise
 author: Apurva Nakade
 date: 2023-08-30
 categories: journal
@@ -7,5 +7,17 @@ categories: journal
 
 I like to think that I am generally a very fit person. 
 I exercise almost everyday and generally lead an active life. 
-I decided to take a Yoga Sculpt class and it kicked my hard ass. 
+Just for fun, I recently tried a Yoga Sculpt class and it kicked my ass. 
+
+This made me realize two things:
+
+1. When working out alone, it's easy to not be fully honest with oneself. I probably take longer breaks, get sidetracked by my phone, or choose lighter weights when I could handle heavier ones.
+2. We can often push ourselves more than we think. I never knew an hour-long HIIT session with weights, like Yoga Sculpt, was something I could do. I'm surprised I hadn't tried it earlier.
+
+I once tried a yoga class via livestream, but it didn't feel the same. The poses might have been identical, but the intensity was different.
+
+I've started to see the benefits of group classes. They push you harder and offer new experiences you might not encounter otherwise.
+
+
+
 
