--- a/scribbles/posts/2023-09-02 harpers ferry.qmd
+++ b/scribbles/posts/2023-09-02 harpers ferry.qmd
@@ -2,19 +2,23 @@
 title: Harper's Ferry
 author: Apurva Nakade
 date: 2023-09-02
+categories:
+  - journal
 ---
 
-Last couple of years I lived in Chicago and could not go on hikes. 
-The land there is flatter than a pancake. 
-It is a perfect place for long-distance biking but an extremely boring one for hiking.
+Over the last couple of years, I lived in Chicago and couldn't go on hikes.
+The land there is flatter than a pancake.
+It's a perfect place for long-distance biking but an extremely boring one for hiking.
 
-I hiked the Loudon Height's trail at Harper's Ferry and absolutely loved it.
-It was a bit tedious at first with no change in scenery - but that is the whole point of hiking.
-It is not about change, or getting somewhere but the journey itself. 
-You walk for hours and let your mind settle down and take in the beauty of your surroundings. 
-There is a deep ancient instinct that kicks in connecting you back to 
+I hiked the Loudon Heights trail at Harper's Ferry and absolutely loved it.
+It was a bit tedious at first with no change in scenery - but that's the whole point of hiking.
+It's not about change, or being comfortable, or getting somewhere, but the journey itself.
+You walk for hours, letting your mind settle down and taking in the beauty of your surroundings.
+There's a deep, ancient instinct that kicks in when you find yourself so close to nature.
+This feeling is hard to describe and equally hard to recollect.
 
-
+When I hadn't hiked for so long, I didn't particularly miss it, but I was also slowly forgetting how much I liked it.
+It is a precious thing that I hope I don't lose as I get busy with life.
 
 <img src="https://lh3.googleusercontent.com/pw/AIL4fc9bgv9JNXRvbNGbbvK-Ccwbeqxkei1OiNd0t0XEi1FaGDeFfl8CTWC7ihtJBSIpetKl2hdMdh8FD8HWUnD6cm3M7zBzAPUJgwu0WxQQfI0ZuQrgrjIRTDSvV8-Mvo_XA8s6uozQ71gV1DCTAerBc8oK7A=w825-h1096-s-no"/>
 
