--- a/scribbles/posts/2023-08-21 history of math.qmd
+++ b/scribbles/posts/2023-08-21 history of math.qmd
@@ -2,7 +2,7 @@
 title: History-of-Math Resources
 categories:
   - resources
-  - history-of-math
+  - history of math
 author: Apurva Nakade
 date: 2023-08-21 22:30:11
 ---
