--- a/scribbles/posts/2023-08-29 integers.qmd
+++ b/scribbles/posts/2023-08-29 integers.qmd
@@ -2,7 +2,7 @@
 title: Etymology of *Integer*
 author: Apurva Nakade
 date: 2023-08-29 09:13:31
-categories: history-of-math
+categories: history of math
 ---
 
 We use integers so much in math that it never occurred to me before yesterday that this is a weird word with a weirder symbol associated to it. 
