--- a/scribbles/posts/2023-09-10 prime sum of squares.qmd
+++ b/scribbles/posts/2023-09-10 prime sum of squares.qmd
@@ -1,6 +1,5 @@
 ---
-title: Every Prime $\equiv 1 (\mod 4)$ Is a Sum of Two Squares
-author: Apurva Nakade
+title: Every Prime $\equiv 1 \mod 4$ Is a Sum of Two Squares
 date: 2023-09-10 15:35:44
 categories: 
   - math
